@@ -16,8 +16,10 @@ package io.seqera.wavelit;
 
 import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
@@ -47,11 +49,10 @@ import org.slf4j.LoggerFactory;
 import picocli.CommandLine;
 import static io.seqera.wave.util.DockerHelper.addPackagesToSpackFile;
 import static io.seqera.wave.util.DockerHelper.spackPackagesToSpackFile;
+import static io.seqera.wavelit.util.Checkers.isEnvVar;
 import static org.apache.commons.lang3.StringUtils.isEmpty;
 import static picocli.CommandLine.Command;
 import static picocli.CommandLine.Option;
-
-import static io.seqera.wavelit.util.Checkers.isEnvVar;
 
 /**
  * Wavelit main class
@@ -110,6 +111,9 @@ public class App implements Runnable {
 
     @Option(names = {"--config-entrypoint"}, paramLabel = "''", description = "Overwrite the default ENTRYPOINT of the image.")
     private String entrypoint;
+
+    @Option(names = {"--config-file"}, paramLabel = "''", description = "Configuration file in JSON format to overwrite the default configuration of the image.")
+    private String configFile;
 
     @Option(names = {"--config-working-dir"}, paramLabel = "''", description = "Overwrite the default WORKDIR of the image e.g. /some/work/dir.")
     private String workingDir;
@@ -340,7 +344,9 @@ public class App implements Runnable {
                 return null;
             // read the text from a URI resource and encode to base64
             if( value.startsWith("file:/") || value.startsWith("http://") || value.startsWith("https://")) {
-                return Base64.getEncoder().encodeToString(Files.readAllBytes(Path.of(new URI(value))));
+                try(InputStream stream=new URI(value).toURL().openStream()) {
+                    return Base64.getEncoder().encodeToString(stream.readAllBytes());
+                }
             }
             // read the text from a local file and encode to base64
             return Base64.getEncoder().encodeToString(Files.readAllBytes(Path.of(value)));
@@ -380,7 +386,13 @@ public class App implements Runnable {
     }
 
     protected ContainerConfig prepareConfig() {
-        final ContainerConfig result = new ContainerConfig();
+        ContainerConfig result = new ContainerConfig();
+
+        // add configuration from config file if specified
+        if( configFile != null ){
+            if( "".equals(configFile.trim()) ) throw new IllegalCliArgumentException("The specified config file is an empty string");
+            result = readConfig(configFile);
+        }
 
         // add the entrypoint if specified
         if( entrypoint!=null )
@@ -490,4 +502,25 @@ public class App implements Runnable {
                 ? resp.containerImage
                 : resp.targetImage;
     }
+
+    protected ContainerConfig readConfig(String path) {
+        try {
+            if( path.startsWith("http://") || path.startsWith("https://") || path.startsWith("file:/")) {
+                try (InputStream stream=new URL(path).openStream()) {
+                    return JsonHelper.fromJson(new String(stream.readAllBytes()), ContainerConfig.class);
+                }
+            }
+            else {
+                return JsonHelper.fromJson(Files.readString(Path.of(path)), ContainerConfig.class);
+            }
+        }
+        catch (FileNotFoundException | NoSuchFileException e) {
+            throw new IllegalCliArgumentException("Invalid container config file - File not found: " + path);
+        }
+        catch (IOException e) {
+            String msg = String.format("Unable to read container config file: %s - Cause: %s", path, e.getMessage());
+            throw new IllegalCliArgumentException(msg, e);
+        }
+    }
+
 }
